# Ferramenta-de-chunked-file-carving

./: README.md
Ferramenta de chunked file carving/: CMakeLists.txt  EXAMPLES.md  INSTALL.md  Makefile  README.md  auxiliar.ps1  build.ps1  build.sh  signatures.conf
Ferramenta de chunked file carving/include/: chunk_reader.h  command_line_parser.h  file_carver.h  file_signature.h  logger.h
Ferramenta de chunked file carving/src/: chunk_reader.cpp  command_line_parser.cpp  file_carver.cpp  file_signature.cpp  logger.cpp  main.cpp
